fixed grpc bug and added redis image
